--- a/src/Template/cup/catalog/product/form.twig
+++ b/src/Template/cup/catalog/product/form.twig
@@ -317,7 +317,7 @@
                                             'type': 'select',
                                             'name': 'tax',
                                             'args': {
-                                                'option': {0: '---'}|merge(tax_rates.pluck('title', 'value.rate').all()),
+                                                'option': collect({0: '---'}).union(tax_rates.pluck('title', 'value.rate').all()),
                                                 'selected': item.tax,
                                             }
                                         } %}
